--- a/12.Day Projects/01-RPS-Project - Project/style.css
+++ b/12.Day Projects/01-RPS-Project - Project/style.css
@@ -8,6 +8,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(138, 218, 191);
 }
 h1{
   font-family: sans-serif;
